# Quasar

./: .gitignore  .gitmodules  Makefile  Makefile.in  README.md  configure.ac  entry.rs  kernel.rs  linker.ld  main.rs  native.rs  runtime.rs  uefi.rs  util.rs
arch/: idt.rs  io.rs  mod.rs
arch/x86_64/: .io.rs.swp  .linker.ld.swp  arch.rs  handlers.s  idt.rs  idt_handlers.rs  io.rs  linker.ld  mod.rs  runtime.s
arch/x86_64/boot/: .loader.s.swp  Makefile  loader.s
kernel/: mod.rs
runtime/: io.rs  lang.rs  mod.rs  num.rs  ops.rs
runtime/io/: stdio.rs
