#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])

# Checks for programs.
AC_PATH_PROG([RUSTC], [rustc])
AC_PATH_PROG([NASM], [nasm])
AC_CHECK_TOOL([LD], [ld])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
